# python-flask-example

./: README.md  api.yaml  pyproject.toml
data_product_api/: __init__.py  auth.py  db.py  schema.sql
