[tool.poetry]
name = "data_product_api"
version = "0.1.0"
description = ""
authors = ["Raman Singh <ramandeep.singh@henkel.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
flask = "^3.0.3"
authlib = "^1.3.2"
requests = "^2.32.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
